<resources>
    <string name="app_name">Pengajuan Lembur</string>
    <string name="activity_login">Login</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_data_pegawai">Data Pegawai</string>
    <string name="nav_data_divisi">Data Divisi</string>
    <string name="nav_data_pm">Data PM</string>
    <string name="nav_pengajuan_lembur">Form Pengajuan</string>
    <string name="nav_list_pengajuan_lembur">List Pengajuan</string>
    <string name="nav_laporan">Laporan</string>
    <string name="nav_keluar">Keluar</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Data Pegawai</item>
        <item>Data Divisi</item>
        <item>Data PM</item>
        <item>Form Pengajuan</item>
        <item>List Pengajuan</item>
        <item>Laporan</item>
    </string-array>

    <string-array name="data_pegawai_data_divisi">
        <item>Android Developer</item>
        <item>Web Developer</item>
        <item>Keuangan</item>
        <item>HRD</item>
    </string-array>

    <string name="action_logout">Keluar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
